--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #header {
 	height: 100vh;
 	width: 100%;
-	background: url('images/imgsmall.png') no-repeat;
+	background: url('imgsmall.png') no-repeat;
 	background-size: cover;
 }
 .container {
